crates/nx-syntax/tests/fixtures/invalid/multiple_errors.nx
// Multiple syntax errors
import core.html

let <Broken1 = {
let <Broken2 />
  <div{x</div>
